# Music-platform

./: .gitignore  README.md  RESULTS.md  conftest.py  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_isapproved_alter_album_artist_and_more.py  0003_alter_album_isapproved.py  0004_album_created_album_modified.py  0005_a.py  0006_delete_a.py  0006_song_delete_a.py
albums/tests/: test_album_models.py  test_api.py
artists/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_user.py  0002_artist_numberofapprovedalbums_and_more.py  0003_remove_artist_numberofapprovedalbums.py  0004_artist_numberofapprovedalbums.py  0005_remove_artist_numberofapprovedalbums.py  0006_alter_artist_sociallink.py  0007_alter_artist_options.py  0008_alter_artist_options.py
artists/tests/: test_artist.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_endpoints.py
musicplatform/: celery.py  settings.py  urls.py
musicplatform/static/js/: create-artist.js  login.js  regestiration.js
static/js/: create-album.js  regestiration.js
templates/albums/: create-album.html
templates/artists/: artists-view.html  create-artist.html  done.html
templates/auth/: log-in.html  register.html
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/tests/: test_user.py
