[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["yusuf-74 <yachour31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
python-dotenv = "^0.21.0"
django-model-utils = "^4.2.0"
django-extensions = "^3.2.1"
ipython = "^8.6.0"
Pillow = "^9.3.0"
django-imagekit = "^4.1.0"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
Pygments = "^2.13.0"
django-rest-knox = "^4.2.0"
pytest-django = "^4.5.2"
django-rest-auth = "^0.9.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
